--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ body {
     color: #fff;
     border: none;
     outline: none;
-    padding: 1rem 1.5rem;
+    padding: 1rem;
     border-radius: 5px;
 }
 .inputspace {
